deployment/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  strategy: { }
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/be-yoga-pose-default: "true"
        io.kompose.service: app
    spec:
      containers:
        - image: gcr.io/yoga-pose-406917/be-yoga-pose:v14
          name: app
          ports:
            - containerPort: 8080
              hostPort: 8080
              protocol: TCP
          resources: { }
      restartPolicy: Always
status: { }
