deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: be-ingress
spec:
  defaultBackend:
    service:
      name: app
      port:
        number: 8080
